--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,8 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: #f0f6ff;
+  
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
